@@ -1,3 +1,9 @@
+2015-11-06  Gerrit Holl  <g.holl@reading.ac.uk>
+
+	* typhon/files/utils.py(decompress):
+
+	- Add lzma support if available.
+
 2015-11-03  Lukas Kluft  <lukas.kluft@gmail.com>
 
 	* typhon/__init__.py (test):
